changes for manager catalog
